# Nexus-Pay

./: .gitignore  CHANGELOG.md  README.md  payment-gateway.cabal
app/: Main.hs
src/: Gateway.hs
src/Gateway/: Card.hs  Class.hs  Mock.hs  StateMachine.hs  Types.hs  UPI.hs  Wallet.hs
test/: GatewaySpec.hs  Spec.hs  StateMachineSpec.hs
