cabal-version:      2.4
name:               payment-gateway
version:            0.1.0.0
synopsis:           Type-safe payment gateway abstraction with GADT state machine
description:
  Models UPI, Card, and Wallet payment gateways behind a unified type class
  interface. Uses GADTs and DataKinds to encode the payment lifecycle as a
  state machine where invalid transitions are unrepresentable at the type level.
license:            MIT
author:             Priya Dev
maintainer:         devpriya2003@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md

common warnings
  ghc-options: -Wall -Wcompat -Widentities
               -Wincomplete-record-updates -Wincomplete-uni-patterns
               -Wmissing-home-modules -Wno-name-shadowing

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Gateway
    Gateway.Types
    Gateway.StateMachine
    Gateway.Class
    Gateway.Mock
    Gateway.UPI
    Gateway.Card
    Gateway.Wallet
  build-depends:
      base    >= 4.14 && < 5
    , text    >= 1.2
    , time    >= 1.9
    , random  >= 1.2
    , containers >= 0.6

executable payment-gateway-demo
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base            >= 4.14 && < 5
    , payment-gateway
    , text            >= 1.2

test-suite payment-gateway-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: Haskell2010
  other-modules:
    GatewaySpec
    StateMachineSpec
  build-depends:
      base            >= 4.14 && < 5
    , payment-gateway
    , QuickCheck      >= 2.14
    , hspec           >= 2.10
    , text            >= 1.2
    , time            >= 1.9
